<resources>
    <string name="app_name">hostel</string>
    <string name="mainScr_title">Savitribai Phule Pune University</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password*</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="email">Email*</string>
    <string name="empty_name_error_msg">Name cannot be empty!</string>
    <string name="empty_email_error_msg">Email cannot be empty</string>
    <string name="empty_password_error_msg">Password cannot be empty</string>
    <string name="not_registered_yet_register_here">Not registered yet, Register here.</string>
</resources>
