<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/toolbar_hostel"
        layout="@layout/hostel_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainScr_margin_start"
        android:layout_marginTop="@dimen/mainScr_margin_top"
        android:layout_marginEnd="@dimen/mainScr_margin_end"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/textColor_black"
        android:textSize="@dimen/mainScr_title_textSize" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_in_layout_username"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/email"
        android:textColorHint="@color/hintColor_black"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_in_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/textColor_black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_in_layout_password"
        style="@style/TextInputLayoutStyle"
        android:hint="@string/password"
        android:textColorHint="@color/hintColor_black"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/textColor_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_in_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/textColor_black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_loginScr_forgot_password"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/mainScr_margin_start"
        android:layout_marginTop="@dimen/mainScr_margin_top"
        android:layout_marginEnd="@dimen/mainScr_margin_end"
        android:text="@string/forgot_password"
        android:textColor="@color/textColor_black"
        android:textSize="@dimen/btn_textSize"
        app:cornerRadius="@dimen/materialBtn_cornerRadius" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_loginScr_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/mainScr_margin_start"
        android:layout_marginTop="@dimen/mainScr_margin_top"
        android:layout_marginEnd="@dimen/mainScr_margin_end"
        android:text="@string/login"
        android:textColor="@color/textColor_black"
        android:textSize="@dimen/btn_textSize"
        app:cornerRadius="@dimen/materialBtn_cornerRadius" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView_register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/mainScr_margin_start"
        android:layout_marginTop="@dimen/mainScr_margin_top"
        android:layout_marginEnd="@dimen/mainScr_margin_end"
        android:layout_marginBottom="@dimen/margin_bottom_end_component"
        android:gravity="end"
        android:text="@string/not_registered_yet_register_here"
        android:textColor="@color/textColor_black" />

</LinearLayout>